--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "backend",
+  "name": "portfolio",
   "version": "0.0.0",
+  "engines": {
+    "node": "16.15.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
+    "nodemon": "^2.0.19",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
